
@startuml
title Class Diagram for Transport System

class TransportPlanner {
    +planTransport()
}

class CarTransport {
    +getRoute()
    +getPrice()
    +book()
}

class TrainTransport {
    +getRoute()
    +getPrice()
    +book()
}

class TransportTracker {
    +setStatus()
    +getStatus()
}

interface MessagingService {
    +sendMessage()
}

class EmailService {
    +sendMessage()
}

class UserRegistration {
    +registerUser()
}

UserRegistration --> MessagingService : uses
MessagingService <|-- EmailService

TransportPlanner --> CarTransport : uses
TransportPlanner --> TrainTransport : uses
CarTransport --> TransportTracker : updates
TrainTransport --> TransportTracker : updates

@enduml
